--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,11 @@ a {
   box-sizing: border-box;
 }
 
+table th,
+table td {
+  vertical-align: middle;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
